k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: usercrud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: maximkaa/usercrud-api:latest
---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: usercrud
spec:
  ports:
  - port: 8080
  selector:
    app: api
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: usercrud
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: maximkaa/usercrud-frontend:latest
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: usercrud
spec:
  ports:
  - port: 80
  selector:
    app: frontend
